--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,23 @@ body {
   padding: 2rem;
 }
 
+.accordianMenu {
+  display: flex; /* Use flexbox for centering */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  margin-top: -3%;
+  text-align: center;
+  margin-left: 0.5rem;
+  font-style: italic;
+  font-size: 1rem;
+}
+
 .logo-container {
-  margin-top: -5%;
+  margin-top: -8%;
   padding: 1% 0; /* Reduce padding to make it smaller */
   display: flex; /* Ensure horizontal alignment */
-  justify-content: center; /* Center align logos */
-  align-items: center; /* Align logos vertically */
+  justify-content: left; /* Center align logos */
+  align-items: left; /* Align logos vertically */
   padding-top: 5%;
 }
 
@@ -71,15 +82,6 @@ body {
   align-items: center;
   justify-content: center;
   padding: 2rem;
-}
-
-.extraText {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-  width: 100%;
-  text-align: center;
 }
 
 .photo-frame {
